# codex-relay

./: .gitignore  README.md  codex-relay  codex-relay-forward  codex-relay-split  package.json  pyproject.toml
docs/: architecture.md  guide.html  proxy-current.html
src/codex_relay/: __init__.py  __main__.py  cli.py  codex.py  install.py  proxy.py
test/: codex-relay.test.js
